--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "bootstrap-css-only",
+  "name": "bootstrap-toddsby",
   "description": "[Bootstrap](http://getbootstrap.com/) CSS and font libraries only. No javascript, and more importantly NO bower depenedency on jQuery.",
-  "version": "3.3.7",
+  "version": "3.3.3",
   "author": "Twitter, Inc.",
   "bugs": {
-    "url": "https://github.com/fyockm/bootstrap-css-only/issues"
+    "url": "https://github.com/toddsby/bootstrap-css-only/issues"
   },
   "files": [
     "css",
@@ -18,12 +18,13 @@
     "fonticons",
     "front-end",
     "web"
+    "webpack"
   ],
   "license": "MIT",
-  "main": "css/bootstrap.min.css",
+  "main": "css/bootstrap.css",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fyockm/bootstrap-css-only.git"
+    "url": "git+https://github.com/toddsby/bootstrap-css-only.git"
   },
   "style": "css/bootstrap.css"
 }
